miner fixes for jdk9 and adaption to differing source level from master